Remember me auth, upgraded jquery and converted to mysql

--- a/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
+++ b/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
@@ -1,4 +1,3 @@
-db.cellar.host=merlin.comanduk.co.uk
-db.cellar.port=5433
-db.cellar.username=richard
-db.cellar.password=richard
+i2037.db.host=localhost
+i2037.db.username=richard
+i2037.db.password=richard
