--- a/i2037-webapp/pom.xml
+++ b/i2037-webapp/pom.xml
@@ -112,9 +112,14 @@
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-      <version>1.6.2</version>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.5</version>
     </dependency>
+    <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <version>1.0.13</version>
+    </dependency>    
   </dependencies>
   <build>
     <pluginManagement>
