--- a/i2037-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/i2037-webapp/src/main/webapp/WEB-INF/web.xml
@@ -23,7 +23,7 @@
   </servlet>
   <servlet-mapping>
     <servlet-name>CXFServlet</servlet-name>
-    <url-pattern>/*</url-pattern>
+    <url-pattern>/cxf/*</url-pattern>
   </servlet-mapping>
   <filter>
     <filter-name>springSecurityFilterChain</filter-name>
