--- a/i2037-webapp/pom.xml
+++ b/i2037-webapp/pom.xml
@@ -167,6 +167,14 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <version>2.1.1</version>
+        <configuration>
+          <webResources>
+            <resource>
+              <!-- this is relative to the pom.xml directory -->
+              <directory>../i2037-client/build</directory>
+            </resource>
+          </webResources>
+        </configuration>        
       </plugin>
 <!--       <plugin> -->
 <!--         <groupId>org.codehaus.mojo</groupId> -->
