--- a/i2037-webapp/pom.xml
+++ b/i2037-webapp/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>net.i2037</groupId>
   <artifactId>i2037-webapp</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+  <version>1.0.0-SNAPSHOT</version>
   <packaging>war</packaging>
   <name>Simple CXF JAX-RS webapp service using spring configuration</name>
   <description>Simple CXF JAX-RS webapp service using spring configuration</description>
@@ -12,6 +12,8 @@
     <jackson.version>1.8.6</jackson.version>
     <cxf.version>2.7.5</cxf.version>
     <hibernate.version>4.1.10.Final</hibernate.version>
+    <spring.version>3.1.0.RELEASE</spring.version>
+    <spring-security.version>3.1.4.RELEASE</spring-security.version>
   </properties>
   <dependencies>
     <dependency>
@@ -63,43 +65,38 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
-      <version>3.1.0.RELEASE</version>
+      <version>${spring.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
-      <version>3.1.0.RELEASE</version>
+      <version>${spring.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-web</artifactId>
-      <version>3.1.0.RELEASE</version>
+      <version>${spring.version}</version>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-orm</artifactId>
-      <version>3.1.0.RELEASE</version>
+      <version>${spring.version}</version>
     </dependency>
    <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-core</artifactId>
-      <version>3.1.4.RELEASE</version>
+      <version>${spring-security.version}</version>
    </dependency> 
    <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-web</artifactId>
-      <version>3.1.4.RELEASE</version>
+      <version>${spring-security.version}</version>
     </dependency> 
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-config</artifactId>
-      <version>3.1.4.RELEASE</version>
+      <version>${spring-security.version}</version>
     </dependency>    
-    <dependency>
-      <groupId>postgresql</groupId>
-      <artifactId>postgresql</artifactId>
-      <version>9.1-901-1.jdbc4</version>
-    </dependency>
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
