--- a/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
+++ b/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
@@ -1,3 +1,3 @@
-i2037.db.host=aa11zwd16de5mqa.cbgm4z1glre2.eu-west-1.rds.amazonaws.com
+i2037.db.host=localhost
 i2037.db.username=richard
-i2037.db.password=qNee4&65
+i2037.db.password=richard
