--- a/i2037-webapp/pom.xml
+++ b/i2037-webapp/pom.xml
@@ -121,24 +121,24 @@
   <build>
     <pluginManagement>
       <plugins>
-        <plugin>
-          <groupId>org.apache.tomcat.maven</groupId>
-          <artifactId>tomcat7-maven-plugin</artifactId>
-          <version>2.0</version>
-          <executions>
-            <execution>
-              <id>default-cli</id>
-              <goals>
-                <goal>run</goal>
-              </goals>
-              <configuration>
-                <port>13000</port>
-                <path>/jaxrs-service</path>
-                <useSeparateTomcatClassLoader>true</useSeparateTomcatClassLoader>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
+<!--         <plugin> -->
+<!--           <groupId>org.apache.tomcat.maven</groupId> -->
+<!--           <artifactId>tomcat7-maven-plugin</artifactId> -->
+<!--           <version>2.0</version> -->
+<!--           <executions> -->
+<!--             <execution> -->
+<!--               <id>default-cli</id> -->
+<!--               <goals> -->
+<!--                 <goal>run</goal> -->
+<!--               </goals> -->
+<!--               <configuration> -->
+<!--                 <port>13000</port> -->
+<!--                 <path>/jaxrs-service</path> -->
+<!--                 <useSeparateTomcatClassLoader>true</useSeparateTomcatClassLoader> -->
+<!--               </configuration> -->
+<!--             </execution> -->
+<!--           </executions> -->
+<!--         </plugin> -->
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-compiler-plugin</artifactId>
@@ -192,59 +192,59 @@
 <!--           </execution> -->
 <!--         </executions> -->
 <!--       </plugin> -->
-      <plugin>
-        <groupId>org.apache.tomcat.maven</groupId>
-        <artifactId>tomcat7-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>start-tomcat</id>
-            <goals>
-              <goal>run-war</goal>
-            </goals>
-            <phase>pre-integration-test</phase>
-            <configuration>
-              <port>${test.server.port}</port>
-              <path>/jaxrs-service</path>
-              <fork>true</fork>
-              <useSeparateTomcatClassLoader>true</useSeparateTomcatClassLoader>
-            </configuration>
-          </execution>
-          <execution>
-            <id>stop-tomcat</id>
-            <goals>
-              <goal>shutdown</goal>
-            </goals>
-            <phase>post-integration-test</phase>
-            <configuration>
-              <path>/jaxrs-service</path>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-failsafe-plugin</artifactId>
-        <version>2.8.1</version>
-        <executions>
-          <execution>
-            <id>integration-test</id>
-            <goals>
-              <goal>integration-test</goal>
-            </goals>
-            <configuration>
-              <systemPropertyVariables>
-                <service.url>http://localhost:${test.server.port}/jaxrs-service</service.url>
-              </systemPropertyVariables>
-            </configuration>
-          </execution>
-          <execution>
-            <id>verify</id>
-            <goals>
-              <goal>verify</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
+<!--       <plugin> -->
+<!--         <groupId>org.apache.tomcat.maven</groupId> -->
+<!--         <artifactId>tomcat7-maven-plugin</artifactId> -->
+<!--         <executions> -->
+<!--           <execution> -->
+<!--             <id>start-tomcat</id> -->
+<!--             <goals> -->
+<!--               <goal>run-war</goal> -->
+<!--             </goals> -->
+<!--             <phase>pre-integration-test</phase> -->
+<!--             <configuration> -->
+<!--               <port>${test.server.port}</port> -->
+<!--               <path>/jaxrs-service</path> -->
+<!--               <fork>true</fork> -->
+<!--               <useSeparateTomcatClassLoader>true</useSeparateTomcatClassLoader> -->
+<!--             </configuration> -->
+<!--           </execution> -->
+<!--           <execution> -->
+<!--             <id>stop-tomcat</id> -->
+<!--             <goals> -->
+<!--               <goal>shutdown</goal> -->
+<!--             </goals> -->
+<!--             <phase>post-integration-test</phase> -->
+<!--             <configuration> -->
+<!--               <path>/jaxrs-service</path> -->
+<!--             </configuration> -->
+<!--           </execution> -->
+<!--         </executions> -->
+<!--       </plugin> -->
+<!--       <plugin> -->
+<!--         <groupId>org.apache.maven.plugins</groupId> -->
+<!--         <artifactId>maven-failsafe-plugin</artifactId> -->
+<!--         <version>2.8.1</version> -->
+<!--         <executions> -->
+<!--           <execution> -->
+<!--             <id>integration-test</id> -->
+<!--             <goals> -->
+<!--               <goal>integration-test</goal> -->
+<!--             </goals> -->
+<!--             <configuration> -->
+<!--               <systemPropertyVariables> -->
+<!--                 <service.url>http://localhost:${test.server.port}/jaxrs-service</service.url> -->
+<!--               </systemPropertyVariables> -->
+<!--             </configuration> -->
+<!--           </execution> -->
+<!--           <execution> -->
+<!--             <id>verify</id> -->
+<!--             <goals> -->
+<!--               <goal>verify</goal> -->
+<!--             </goals> -->
+<!--           </execution> -->
+<!--         </executions> -->
+<!--       </plugin> -->
     </plugins>
   </build>
 </project>
