Added moves map to the cage and highcharts

--- a/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
+++ b/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
@@ -1,3 +1,6 @@
 i2037.db.host=localhost
 i2037.db.username=richard
 i2037.db.password=richard
+
+i2037.moves.client-id=uQG9VcS74302R56wv7uiodigAXuKiCQV
+i2037.moves.cleint-secret=
