Added moves map to cage

--- a/i2037-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/i2037-webapp/src/main/webapp/WEB-INF/web.xml
@@ -10,10 +10,11 @@
     <welcome-file>index.html</welcome-file>
   </welcome-file-list>
   <listener>
-    <listener-class>
-			org.springframework.web.context.ContextLoaderListener
-		</listener-class>
+    <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+  <listener>
+    <listener-class>org.springframework.web.context.request.RequestContextListener</listener-class>
+  </listener>  
   <servlet>
     <servlet-name>CXFServlet</servlet-name>
     <servlet-class>
