--- a/i2037-webapp/pom.xml
+++ b/i2037-webapp/pom.xml
@@ -91,12 +91,17 @@
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-web</artifactId>
       <version>${spring-security.version}</version>
-    </dependency> 
+    </dependency>
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-config</artifactId>
       <version>${spring-security.version}</version>
-    </dependency>    
+    </dependency>
+    <dependency>
+     <groupId>org.springframework.security.oauth</groupId>
+     <artifactId>spring-security-oauth2</artifactId>
+     <version>1.0.5.RELEASE</version>
+    </dependency>
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
