added UserDetailsService to provide DB auth

--- a/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
+++ b/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
@@ -3,4 +3,6 @@ i2037.db.username=richard
 i2037.db.password=richard
 
 i2037.moves.client-id=uQG9VcS74302R56wv7uiodigAXuKiCQV
-i2037.moves.cleint-secret=
+i2037.moves.client-secret=
+
+i2037.password.salt=
