--- a/i2037-webapp/pom.xml
+++ b/i2037-webapp/pom.xml
@@ -118,6 +118,11 @@
       <version>1.7.5</version>
     </dependency>
     <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>log4j-over-slf4j</artifactId>
+      <version>1.7.5</version>
+    </dependency>    
+    <dependency>
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
         <version>1.0.13</version>
@@ -178,78 +183,78 @@
           </webResources>
         </configuration>        
       </plugin>
-<!--       <plugin> -->
-<!--         <groupId>org.codehaus.mojo</groupId> -->
-<!--         <artifactId>build-helper-maven-plugin</artifactId> -->
-<!--         <version>1.5</version> -->
-<!--         <executions> -->
-<!--           <execution> -->
-<!--             <id>reserve-network-port</id> -->
-<!--             <goals> -->
-<!--               <goal>reserve-network-port</goal> -->
-<!--             </goals> -->
-<!--             <phase>process-test-resources</phase> -->
-<!--             <configuration> -->
-<!--               <portNames> -->
-<!--                 <portName>test.server.port</portName> -->
-<!--               </portNames> -->
-<!--             </configuration> -->
-<!--           </execution> -->
-<!--         </executions> -->
-<!--       </plugin> -->
-<!--       <plugin> -->
-<!--         <groupId>org.apache.tomcat.maven</groupId> -->
-<!--         <artifactId>tomcat7-maven-plugin</artifactId> -->
-<!--         <executions> -->
-<!--           <execution> -->
-<!--             <id>start-tomcat</id> -->
-<!--             <goals> -->
-<!--               <goal>run-war</goal> -->
-<!--             </goals> -->
-<!--             <phase>pre-integration-test</phase> -->
-<!--             <configuration> -->
-<!--               <port>${test.server.port}</port> -->
-<!--               <path>/jaxrs-service</path> -->
-<!--               <fork>true</fork> -->
-<!--               <useSeparateTomcatClassLoader>true</useSeparateTomcatClassLoader> -->
-<!--             </configuration> -->
-<!--           </execution> -->
-<!--           <execution> -->
-<!--             <id>stop-tomcat</id> -->
-<!--             <goals> -->
-<!--               <goal>shutdown</goal> -->
-<!--             </goals> -->
-<!--             <phase>post-integration-test</phase> -->
-<!--             <configuration> -->
-<!--               <path>/jaxrs-service</path> -->
-<!--             </configuration> -->
-<!--           </execution> -->
-<!--         </executions> -->
-<!--       </plugin> -->
-<!--       <plugin> -->
-<!--         <groupId>org.apache.maven.plugins</groupId> -->
-<!--         <artifactId>maven-failsafe-plugin</artifactId> -->
-<!--         <version>2.8.1</version> -->
-<!--         <executions> -->
-<!--           <execution> -->
-<!--             <id>integration-test</id> -->
-<!--             <goals> -->
-<!--               <goal>integration-test</goal> -->
-<!--             </goals> -->
-<!--             <configuration> -->
-<!--               <systemPropertyVariables> -->
-<!--                 <service.url>http://localhost:${test.server.port}/jaxrs-service</service.url> -->
-<!--               </systemPropertyVariables> -->
-<!--             </configuration> -->
-<!--           </execution> -->
-<!--           <execution> -->
-<!--             <id>verify</id> -->
-<!--             <goals> -->
-<!--               <goal>verify</goal> -->
-<!--             </goals> -->
-<!--           </execution> -->
-<!--         </executions> -->
-<!--       </plugin> -->
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>1.5</version>
+        <executions>
+          <execution>
+            <id>reserve-network-port</id>
+            <goals>
+              <goal>reserve-network-port</goal>
+            </goals>
+            <phase>process-test-resources</phase>
+            <configuration>
+              <portNames>
+                <portName>test.server.port</portName>
+              </portNames>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.tomcat.maven</groupId>
+        <artifactId>tomcat7-maven-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>start-tomcat</id>
+            <goals>
+              <goal>run-war</goal>
+            </goals>
+            <phase>pre-integration-test</phase>
+            <configuration>
+              <port>${test.server.port}</port>
+              <path>/jaxrs-service</path>
+              <fork>true</fork>
+              <useSeparateTomcatClassLoader>true</useSeparateTomcatClassLoader>
+            </configuration>
+          </execution>
+          <execution>
+            <id>stop-tomcat</id>
+            <goals>
+              <goal>shutdown</goal>
+            </goals>
+            <phase>post-integration-test</phase>
+            <configuration>
+              <path>/jaxrs-service</path>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-failsafe-plugin</artifactId>
+        <version>2.8.1</version>
+        <executions>
+          <execution>
+            <id>integration-test</id>
+            <goals>
+              <goal>integration-test</goal>
+            </goals>
+            <configuration>
+              <systemPropertyVariables>
+                <service.url>http://localhost:${test.server.port}/jaxrs-service</service.url>
+              </systemPropertyVariables>
+            </configuration>
+          </execution>
+          <execution>
+            <id>verify</id>
+            <goals>
+              <goal>verify</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 </project>
