updated moves to allow auth token registration

--- a/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
+++ b/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
@@ -2,7 +2,8 @@ i2037.db.host=localhost
 i2037.db.username=richard
 i2037.db.password=richard
 
-i2037.moves.client-id=uQG9VcS74302R56wv7uiodigAXuKiCQV
+i2037.moves.client-id=
 i2037.moves.client-secret=
+i2037.moves.redirect-uri=http://localhost:8888/i2037/#/moves
 
 i2037.password.salt=
