--- a/i2037-client/package.json
+++ b/i2037-client/package.json
@@ -11,6 +11,16 @@
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-preprocess": "~2.3.0",
-    "grunt-env": "~0.4.0"
+    "grunt-env": "~0.4.0",
+    "karma-script-launcher": "~0.1.0",
+    "karma-chrome-launcher": "~0.1.0",
+    "karma-firefox-launcher": "~0.1.0",
+    "karma-html2js-preprocessor": "~0.1.0",
+    "karma-jasmine": "~0.1.3",
+    "karma-requirejs": "~0.1.0",
+    "karma-coffee-preprocessor": "~0.1.0",
+    "karma-phantomjs-launcher": "~0.1.0",
+    "karma": "~0.10.4",
+    "karma-junit-reporter": "~0.1.0"
   }
 }
