--- a/i2037-client/package.json
+++ b/i2037-client/package.json
@@ -21,6 +21,7 @@
     "karma-coffee-preprocessor": "~0.1.0",
     "karma-phantomjs-launcher": "~0.1.0",
     "karma": "~0.10.4",
-    "karma-junit-reporter": "~0.1.0"
+    "karma-junit-reporter": "~0.1.0",
+    "grunt-karma": "~0.6.2"
   }
 }
