--- a/i2037-client/package.json
+++ b/i2037-client/package.json
@@ -15,6 +15,7 @@
     "karma-script-launcher": "~0.1.0",
     "karma-chrome-launcher": "~0.1.0",
     "karma-firefox-launcher": "~0.1.0",
+    "grunt-html2js": "~0.1.9",
     "karma-html2js-preprocessor": "~0.1.0",
     "karma-jasmine": "~0.1.3",
     "karma-requirejs": "~0.1.0",
