--- a/i2037-webapp/pom.xml
+++ b/i2037-webapp/pom.xml
@@ -126,7 +126,13 @@
         <groupId>ch.qos.logback</groupId>
         <artifactId>logback-classic</artifactId>
         <version>1.0.13</version>
-    </dependency>    
+    </dependency>
+    <dependency>
+    	<groupId>com.googlecode.jmockit</groupId>
+    	<artifactId>jmockit</artifactId>
+    	<version>1.5</version>
+    	<scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <pluginManagement>
