--- a/i2037-webapp/pom.xml
+++ b/i2037-webapp/pom.xml
@@ -133,6 +133,11 @@
     	<version>1.5</version>
     	<scope>test</scope>
     </dependency>
+    <dependency>
+    	<groupId>joda-time</groupId>
+    	<artifactId>joda-time</artifactId>
+    	<version>2.3</version>
+    </dependency>
   </dependencies>
   <build>
     <pluginManagement>
