--- a/.gitignore
+++ b/.gitignore
@@ -136,7 +136,8 @@ Desktop.ini
 # Packages
 *.egg
 *.egg-info
-dist
+# RAP disabled dist because bower_components use this
+#dist
 build
 eggs
 parts
