--- a/i2037-webapp/pom.xml
+++ b/i2037-webapp/pom.xml
@@ -11,9 +11,9 @@
   <properties>
     <jackson.version>1.8.6</jackson.version>
     <cxf.version>2.7.11</cxf.version>
-    <hibernate.version>4.2.8.Final</hibernate.version>
-    <spring.version>3.1.0.RELEASE</spring.version>
-    <spring-security.version>3.1.4.RELEASE</spring-security.version>
+    <hibernate.version>4.2.12.Final</hibernate.version>
+    <spring.version>4.0.3.RELEASE</spring.version>
+    <spring-security.version>3.2.3.RELEASE</spring-security.version>
   </properties>
   <dependencies>
     <dependency>
@@ -64,6 +64,13 @@
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
+      <artifactId>spring-framework-bom</artifactId>
+      <version>${spring.version}</version>
+      <type>pom</type>
+      <scope>import</scope>
+    </dependency>    
+    <dependency>
+      <groupId>org.springframework</groupId>
       <artifactId>spring-test</artifactId>
       <version>${spring.version}</version>
     </dependency>
@@ -77,6 +84,11 @@
       <artifactId>spring-web</artifactId>
       <version>${spring.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
+      <version>${spring.version}</version>
+    </dependency>    
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-orm</artifactId>
