--- a/i2037-client/package.json
+++ b/i2037-client/package.json
@@ -3,25 +3,25 @@
   "version": "1.0.0",
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-contrib-jshint": "~0.6.0",
-    "grunt-contrib-nodeunit": "~0.2.0",
-    "grunt-contrib-uglify": "~0.2.2",
-    "grunt-contrib-watch": "~0.5.1",
-    "grunt-contrib-concat": "~0.3.0",
-    "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-preprocess": "~2.3.0",
+    "grunt-contrib-concat": "^0.3.0",
+    "grunt-contrib-copy": "^0.4.1",
+    "grunt-contrib-jshint": "^0.6.5",
+    "grunt-contrib-nodeunit": "^0.2.2",
+    "grunt-contrib-uglify": "^0.2.7",
+    "grunt-contrib-watch": "^0.5.3",
     "grunt-env": "~0.4.0",
-    "karma-script-launcher": "~0.1.0",
+    "grunt-html2js": "^0.1.9",
+    "grunt-karma": "^0.6.2",
+    "grunt-preprocess": "^2.3.0",
+    "karma": "^0.10.10",
     "karma-chrome-launcher": "~0.1.0",
-    "grunt-html2js": "~0.1.9",
+    "karma-coffee-preprocessor": "^0.1.3",
     "karma-html2js-preprocessor": "~0.1.0",
     "karma-jasmine": "~0.1.3",
-    "karma-requirejs": "~0.2.0",
-    "karma-coffee-preprocessor": "~0.1.0",
+    "karma-junit-reporter": "^0.1.0",
     "karma-phantomjs-launcher": "~0.1.0",
-    "karma": "~0.10.8",
-    "karma-junit-reporter": "~0.1.0",
-    "grunt-karma": "~0.6.2"
+    "karma-requirejs": "~0.2.0",
+    "karma-script-launcher": "~0.1.0"
   }
 }
