--- a/i2037-client/package.json
+++ b/i2037-client/package.json
@@ -2,16 +2,16 @@
   "name": "i2037-client",
   "version": "1.0.0",
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-concat": "^0.3.0",
-    "grunt-contrib-copy": "^0.4.1",
-    "grunt-contrib-jshint": "^0.6.5",
-    "grunt-contrib-nodeunit": "^0.2.2",
-    "grunt-contrib-uglify": "^0.2.7",
-    "grunt-contrib-watch": "^0.5.3",
-    "grunt-env": "~0.4.0",
-    "grunt-html2js": "^0.1.9",
+    "grunt": "^0.4.5",
+    "grunt-contrib-clean": "^0.5.0",
+    "grunt-contrib-concat": "^0.4.0",
+    "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-contrib-nodeunit": "^0.4.0",
+    "grunt-contrib-uglify": "^0.4.0",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-env": "^0.4.1",
+    "grunt-html2js": "^0.2.7",
     "grunt-karma": "^0.6.2",
     "grunt-preprocess": "^2.3.0",
     "karma": "^0.10.10",
