--- a/i2037-client/package.json
+++ b/i2037-client/package.json
@@ -12,15 +12,15 @@
     "grunt-contrib-watch": "^0.6.1",
     "grunt-env": "^0.4.1",
     "grunt-html2js": "^0.2.7",
-    "grunt-karma": "^0.6.2",
-    "grunt-preprocess": "^2.3.0",
-    "karma": "^0.10.10",
-    "karma-chrome-launcher": "~0.1.0",
+    "grunt-karma": "^0.8.3",
+    "grunt-preprocess": "^4.0.0",
+    "karma": "^0.12.16",
+    "karma-chrome-launcher": "^0.1.4",
     "karma-coffee-preprocessor": "^0.1.3",
-    "karma-html2js-preprocessor": "~0.1.0",
-    "karma-jasmine": "~0.1.3",
-    "karma-junit-reporter": "^0.1.0",
-    "karma-phantomjs-launcher": "~0.1.0",
+    "karma-html2js-preprocessor": "^0.1.0",
+    "karma-jasmine": "^0.1.5",
+    "karma-junit-reporter": "^0.2.2",
+    "karma-phantomjs-launcher": "^0.1.4",
     "karma-requirejs": "~0.2.0",
     "karma-script-launcher": "~0.1.0"
   }
