--- a/i2037-client/package.json
+++ b/i2037-client/package.json
@@ -20,8 +20,6 @@
     "karma-html2js-preprocessor": "^0.1.0",
     "karma-jasmine": "^0.1.5",
     "karma-junit-reporter": "^0.2.2",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-requirejs": "~0.2.0",
-    "karma-script-launcher": "~0.1.0"
+    "karma-phantomjs-launcher": "^0.1.4"
   }
 }
