added flickr photo cxf service

--- a/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
+++ b/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
@@ -6,4 +6,8 @@ i2037.moves.client-id=
 i2037.moves.client-secret=
 i2037.moves.redirect-uri=http://localhost:8888/i2037/#/journal
 
+i2037.flickr.client-id=
+i2037.flickr.client-secret=
+i2037.flickr.redirect-uri=http://localhost:8888/i2037/#/journal
+
 i2037.password.salt=
