--- a/i2037-webapp/pom.xml
+++ b/i2037-webapp/pom.xml
@@ -115,6 +115,11 @@
      <version>1.0.5.RELEASE</version>
     </dependency>
     <dependency>
+     <groupId>org.springframework.security.oauth</groupId>
+     <artifactId>spring-security-oauth</artifactId>
+     <version>1.0.5.RELEASE</version>
+    </dependency>    
+    <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.25</version>
@@ -155,7 +160,7 @@
 		  <artifactId>javax.servlet-api</artifactId>
 		  <version>3.0.1</version>
 		  <scope>provided</scope>
-		</dependency>               
+		</dependency>
   </dependencies>
   <build>
     <pluginManagement>
