--- a/i2037-client/bower.json
+++ b/i2037-client/bower.json
@@ -25,7 +25,7 @@
     "jquery.cookie": "~1.4.0",
     "jquery": "~2.0.3",
     "spinjs": "~1.3.2",
-    "angular-ui-calendar": "latest"
+    "angular-ui-calendar": "0.8.0"
   },
   "resolutions": {
     "jquery": "~2.0.3"
