--- a/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
+++ b/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
@@ -4,7 +4,7 @@ i2037.db.password=richard
 
 i2037.moves.client-id=
 i2037.moves.client-secret=
-i2037.moves.redirect-uri=http://localhost:8888/i2037/#/journal
+i2037.moves.redirect-uri=http://localhost:8888/i2037/#/journal/authorised
 
 i2037.flickr.client-id=
 i2037.flickr.client-secret=
