fixed release build

--- a/i2037-webapp/pom.xml
+++ b/i2037-webapp/pom.xml
@@ -239,7 +239,7 @@
           <webResources>
             <resource>
               <!-- this is relative to the pom.xml directory -->
-              <directory>../i2037-client/build/release</directory>
+              <directory>../i2037-client/build</directory>
             </resource>
           </webResources>
         </configuration>        
