--- a/i2037-mobile/bower.json
+++ b/i2037-mobile/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "HelloIonic",
+  "name": "i2037-mobile",
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.0.0"
