--- a/i2037-mobile/package.json
+++ b/i2037-mobile/package.json
@@ -12,11 +12,11 @@
   "devDependencies": {
     "angular-mocks": "^1.4.1",
     "bower": "^1.3.3",
+    "del": "^2.0.1",
     "gulp-jasmine": "^2.0.1",
-    "gulp-karma": "0.0.4",
     "gulp-util": "^2.2.14",
     "jasmine-core": "^2.3.4",
-    "karma": "^0.12.36",
+    "karma": "^0.12.37",
     "karma-chrome-launcher": "^0.1.12",
     "karma-jasmine": "^0.3.5",
     "karma-junit-reporter": "^0.2.2",
