--- a/i2037-mobile/package.json
+++ b/i2037-mobile/package.json
@@ -19,7 +19,9 @@
     "karma": "^0.12.37",
     "karma-chrome-launcher": "^0.1.12",
     "karma-jasmine": "^0.3.5",
-    "karma-junit-reporter": "^0.2.2",
+    "karma-junit-reporter": "^0.3.4",
+    "karma-requirejs": "^0.2.2",
+    "requirejs": "^2.1.20",
     "shelljs": "^0.3.0"
   },
   "cordovaPlugins": [
