--- a/i2037-client/package.json
+++ b/i2037-client/package.json
@@ -14,6 +14,7 @@
     "grunt-html2js": "^0.2.7",
     "grunt-karma": "^0.8.3",
     "grunt-preprocess": "^4.0.0",
+    "grunt-sass": "^1.1.0",
     "grunt-typescript": "^0.6.1",
     "karma": "^0.12.16",
     "karma-chrome-launcher": "^0.1.4",
