--- a/i2037-client/package.json
+++ b/i2037-client/package.json
@@ -15,14 +15,13 @@
     "grunt-karma": "^0.8.3",
     "grunt-preprocess": "^4.0.0",
     "grunt-sass": "^1.1.0",
-    "grunt-typescript": "^0.6.1",
+    "grunt-ts": "^5.2.0",
     "karma": "^0.12.16",
     "karma-chrome-launcher": "^0.1.4",
     "karma-coffee-preprocessor": "^0.1.3",
     "karma-html2js-preprocessor": "^0.1.0",
     "karma-jasmine": "^0.1.5",
     "karma-junit-reporter": "^0.2.2",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "typescript": "^1.4.1"
+    "karma-phantomjs-launcher": "^0.1.4"
   }
 }
