moved artifacts to build dir

--- a/i2037-client/tsconfig.json
+++ b/i2037-client/tsconfig.json
@@ -3,7 +3,8 @@
     "module": "amd",
     "target": "es5",
     "sourceMap": true,
-    "outFile": "./build/js/i2037-client.ts.js"
+    "outDir": "./build",
+    "rootDir": "."
   },
   "exclude": [
     "node_modules",
