--- a/i2037-client/tsconfig.json
+++ b/i2037-client/tsconfig.json
@@ -1,10 +1,13 @@
 {
   "compilerOptions": {
-    "module": "amd",
+    "module": "system",
     "target": "es5",
     "sourceMap": true,
     "outDir": "./build",
-    "rootDir": "."
+    "rootDir": ".",
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "removeComments": false
   },
   "exclude": [
     "node_modules",
