--- a/i2037-client/package.json
+++ b/i2037-client/package.json
@@ -1,6 +1,15 @@
 {
   "name": "i2037-client",
   "version": "1.0.0",
+  "dependencies": {
+    "angular2": "2.0.0-beta.0",
+    "es6-promise": "^3.0.2",
+    "es6-shim": "^0.33.3",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.0",
+    "systemjs": "^0.19.6",
+    "zone.js": "0.5.10"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.7.0",
@@ -22,9 +31,7 @@
     "karma-html2js-preprocessor": "^0.1.0",
     "karma-jasmine": "^0.3.6",
     "karma-junit-reporter": "^0.3.8",
-    "karma-phantomjs-launcher": "^0.2.2"
-  },
-  "dependencies": {
-    "systemjs": "^0.19.9"
+    "karma-phantomjs-launcher": "^0.2.2",
+    "typescript": "^1.7.3"
   }
 }
