--- a/i2037-client/tsconfig.json
+++ b/i2037-client/tsconfig.json
@@ -8,11 +8,12 @@
     "rootDir": ".",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
-    "removeComments": false
+    "removeComments": false,
+    "noImplicitAny": false
   },
   "exclude": [
     "node_modules",
-    "bower_components",
-    "build"
+    "build",
+    "typings"
   ]
 }
