--- a/i2037-webapp/build.gradle
+++ b/i2037-webapp/build.gradle
@@ -43,3 +43,7 @@ dependencies {
     providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version:'3.0.1'
 }
 
+war {
+    from '../i2037-client/build/app'
+}
+
