--- a/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
+++ b/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
@@ -1,6 +1,6 @@
-i2037.db.host=localhost
-i2037.db.username=richard
-i2037.db.password=richard
+I2037_DB_HOST=localhost
+I2037_DB_USERNAME=richard
+I2037_DB_PASSWORD=richard
 
 i2037.moves.client-id=
 i2037.moves.client-secret=
