--- a/deploy/kubernetes/i2037-db.yaml
+++ b/deploy/kubernetes/i2037-db.yaml
@@ -45,7 +45,10 @@ spec:
         env:
           # Use secret in real usage
         - name: MYSQL_ROOT_PASSWORD
-          value: password
+          valueFrom:
+            secretKeyRef:
+              name: i2037-db-root-pass
+              key: password
         ports:
         - containerPort: 3306
           name: i2037-db
