--- a/i2037-client/package.json
+++ b/i2037-client/package.json
@@ -23,7 +23,7 @@
     "grunt-html2js": "^0.3.5",
     "grunt-karma": "^0.12.1",
     "grunt-preprocess": "^5.0.1",
-    "grunt-sass": "^1.1.0",
+    "grunt-sass": "^1.2.1",
     "grunt-ts": "^5.2.0",
     "jasmine-core": "^2.4.1",
     "karma": "^0.13.16",
@@ -32,6 +32,7 @@
     "karma-jasmine": "^0.3.6",
     "karma-junit-reporter": "^0.3.8",
     "karma-phantomjs-launcher": "^0.2.2",
+    "phantomjs": "^2.1.7",
     "typescript": "1.7.5"
   }
 }
