--- a/deploy/docker/i2037-db/Dockerfile
+++ b/deploy/docker/i2037-db/Dockerfile
@@ -1,2 +1,3 @@
-FROM mysql:5.6
-COPY ./i2037-20170126.sql /docker-entrypoint-initdb.d
+FROM mysql:5.5
+COPY ./user.sql /docker-entrypoint-initdb.d/01-user.sql
+COPY ./i2037-20170126.sql /docker-entrypoint-initdb.d/02-i2037-20170126.sql
