--- a/i2037-client/package.json
+++ b/i2037-client/package.json
@@ -1,6 +1,12 @@
 {
   "name": "i2037-client",
   "version": "1.0.0",
+  "description": "i2037 client application",
+  "author": "Richard Priestley",
+  "license": "MIT",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "angular2": "2.0.0-beta.3",
     "es6-promise": "^3.0.2",
@@ -11,6 +17,9 @@
     "zone.js": "0.5.11"
   },
   "devDependencies": {
+    "connect-livereload": "^0.6.0",
+    "express": "^4.14.1",
+    "express-http-proxy": "^0.11.0",
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-concat": "^0.5.1",
