--- a/i2037-webapp/build.gradle
+++ b/i2037-webapp/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'war'
 apply plugin: 'idea'
-apply from: 'https://raw.github.com/akhikhl/gretty/master/pluginScripts/gretty.plugin'
+apply from: 'gretty.plugin'
 
 group = 'net.i2037'
 version = '1.0.0-SNAPSHOT'
