--- a/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
+++ b/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
@@ -1,4 +1,4 @@
-I2037_DB_HOST=localhost
+I2037_DB_HOST=192.168.99.100:31162
 I2037_DB_USERNAME=richard
 I2037_DB_PASSWORD=richard
 
@@ -10,4 +10,4 @@ i2037.flickr.client-id=
 i2037.flickr.client-secret=
 i2037.flickr.redirect-uri=http://localhost:8888/i2037/#/journal
 
-i2037.password.salt=
+i2037.password.salt=toomanysecrets
