--- a/i2037-client/tsconfig.json
+++ b/i2037-client/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "inlineSources": true,
     "target": "es5",
     "module": "system",
     "moduleResolution": "node",
@@ -9,11 +10,7 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": false,
-    "noImplicitAny": false
-  },
-  "exclude": [
-    "node_modules",
-    "build",
-    "typings"
-  ]
+    "noImplicitAny": false,
+    "lib": ["es2015", "dom"]
+  }
 }
