--- a/i2037-client/package.json
+++ b/i2037-client/package.json
@@ -50,7 +50,8 @@
     "karma-jasmine": "^0.3.6",
     "karma-junit-reporter": "^0.3.8",
     "karma-phantomjs-launcher": "^0.2.2",
+    "morgan": "^1.8.1",
     "phantomjs": "^2.1.7",
-    "typescript": "~2.1.0"
+    "typescript": "^2.1.6"
   }
 }
