sorted out the localhost addresses

--- a/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
+++ b/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
@@ -4,10 +4,10 @@ I2037_DB_PASSWORD=richard
 
 i2037.moves.client-id=
 i2037.moves.client-secret=
-i2037.moves.redirect-uri=http://localhost:8888/i2037/#/journal/authorised
+i2037.moves.redirect-uri=http://localhost:9070/i2037-webapp/#/journal/authorised
 
 i2037.flickr.client-id=
 i2037.flickr.client-secret=
-i2037.flickr.redirect-uri=http://localhost:8888/i2037/#/journal
+i2037.flickr.redirect-uri=http://localhost:9070/i2037-webapp/#/journal
 
-i2037.password.salt=toomanysecrets
+i2037.password.salt=
