--- a/i2037-client/package.json
+++ b/i2037-client/package.json
@@ -33,7 +33,6 @@
     "grunt-contrib-clean": "^0.7.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-copy": "^0.8.2",
-    "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-nodeunit": "^0.4.0",
     "grunt-contrib-uglify": "^0.11.0",
     "grunt-contrib-watch": "^0.6.1",
@@ -41,6 +40,7 @@
     "grunt-html2js": "^0.3.5",
     "grunt-karma": "^0.12.1",
     "grunt-preprocess": "^5.0.1",
+    "grunt-rollup": "^1.0.1",
     "grunt-sass": "^1.2.1",
     "grunt-ts": "^6.0.0-beta.15",
     "jasmine-core": "^2.4.1",
@@ -52,6 +52,9 @@
     "karma-phantomjs-launcher": "^0.2.2",
     "morgan": "^1.8.1",
     "phantomjs": "^2.1.7",
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-uglify": "^1.0.2",
     "typescript": "^2.1.6"
   }
 }
