--- a/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
+++ b/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
@@ -10,4 +10,4 @@ i2037.flickr.client-id=
 i2037.flickr.client-secret=
 i2037.flickr.redirect-uri=http://localhost:9070/i2037-webapp/#/journal
 
-i2037.password.salt=
+i2037.password.salt=nothing
