added resource constraints

--- a/deploy/k8s/i2037-db.yaml
+++ b/deploy/k8s/i2037-db.yaml
@@ -42,6 +42,13 @@ spec:
       containers:
       - image: i2037-db:1.0.1
         name: i2037-db
+        resources:
+          requests:
+            cpu: "250m"
+            memory: "700Mi"
+          limits:
+            cpu: "500m"
+            memory: "1024Mi"
         env:
           # Use secret in real usage
         - name: MYSQL_ROOT_PASSWORD
