--- a/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
+++ b/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
@@ -1,6 +1,6 @@
-I2037_DB_HOST=192.168.99.100:30535
-I2037_DB_USERNAME=richard
-I2037_DB_PASSWORD=richard
+i2037.db.host=192.168.99.100:30535
+i2037.db.username=richard
+I2037_DB_PASSWORD=
 
 i2037.moves.client-id=
 i2037.moves.client-secret=
@@ -10,4 +10,4 @@ i2037.flickr.client-id=
 i2037.flickr.client-secret=
 i2037.flickr.redirect-uri=http://localhost:9070/i2037-webapp/#/journal
 
-i2037.password.salt=nothing
+I2037_PASSWORD_SALT=
