added k8s template generation

--- a/i2037-deploy/k8s/templates/i2037-db.yaml
+++ b/i2037-deploy/k8s/templates/i2037-db.yaml
@@ -40,7 +40,7 @@ spec:
         tier: db
     spec:
       containers:
-      - image: eu.gcr.io/i2037-165621/i2037-db:1.0.1
+      - image: __IMAGE__
         name: i2037-db
         resources:
           requests:
