added i2037-webapp secret

--- a/i2037-deploy/k8s/templates/i2037-db.yaml
+++ b/i2037-deploy/k8s/templates/i2037-db.yaml
@@ -59,7 +59,10 @@ spec:
         - name: MYSQL_DATABASE
           value: i2037
         - name: MYSQL_USER
-          value: richard
+          valueFrom:
+            secretKeyRef:
+              name: i2037-db-user-pass
+              key: username
         - name: MYSQL_PASSWORD
           valueFrom:
             secretKeyRef:
