--- a/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
+++ b/i2037-webapp/src/main/webapp/WEB-INF/i2037.properties
@@ -1,5 +1,5 @@
-i2037.db.host=192.168.99.100:30535
-i2037.db.username=richard
+i2037.db.host=i2037-db
+I2037_DB_USERNAME=
 I2037_DB_PASSWORD=
 
 i2037.moves.client-id=
@@ -10,4 +10,4 @@ i2037.flickr.client-id=
 i2037.flickr.client-secret=
 i2037.flickr.redirect-uri=http://localhost:9070/i2037-webapp/#/journal
 
-I2037_PASSWORD_SALT=
+i2037.password.salt=
