--- a/i2037-deploy/docker/i2037-webapp/Dockerfile
+++ b/i2037-deploy/docker/i2037-webapp/Dockerfile
@@ -1,2 +1,3 @@
 FROM tomcat:7.0-jre8
-COPY ./i2037-webapp.war /usr/local/tomcat/webapps/i2037-webapp.war
+RUN rm -Rf /usr/local/tomcat/webapps/*
+COPY ./i2037-webapp.war /usr/local/tomcat/webapps/ROOT.war
